src/test/ui/parser/mismatched-braces/missing-close-brace-in-trait.stderr
error: this file contains an unclosed delimiter
  --> $DIR/missing-close-brace-in-trait.rs:11:65
   |
LL | trait T {
   |         - unclosed delimiter
...
LL | fn main() {}
   |                                                                 ^

error: expected one of `async`, `const`, `default`, `extern`, `fn`, `type`, or `unsafe`, found keyword `struct`
  --> $DIR/missing-close-brace-in-trait.rs:4:12
   |
LL | pub(crate) struct Bar<T>();
   |            ^^^^^^ expected one of 7 possible tokens

error: aborting due to 2 previous errors

